add_subdirectory (Eureka.Precompiled)
add_subdirectory (Eureka.Core)
add_subdirectory (Eureka.Serialization)
add_subdirectory (Eureka.Interfaces)

#add_subdirectory (Eureka.AssetLoading)
add_subdirectory (Eureka.Vulkan)
add_subdirectory (Eureka.Windowing)
add_subdirectory (Eureka.Graphics)
add_subdirectory (Eureka.Shaders)
add_subdirectory (Eureka.Flutter)
if (WIN32) #currently only supports windows, we need to compile flutter engine on linux
	add_subdirectory (flutter_vulkan_desktop_embedder)
endif()
add_subdirectory (Eureka.RemoteClient)
add_subdirectory (Eureka.RemoteServer)      
add_subdirectory (Eureka.RPC)
add_subdirectory (Eureka.RemoteProto)
#add_subdirectory (Eureka.RemoteServer)

